log/build_2023-11-23_16-11-30/turtle_custom_controller/stderr.log
  File "/home/beaver/ros2_ex_turtlesim/install/turtle_custom_controller/lib/python3.10/site-packages/turtle_custom_controller/turtle_controller.py", line 21
    else if key.char == 's':
         ^^
SyntaxError: expected ':'

